--- a/Admin/create_Code_Assignment.html
+++ b/Admin/create_Code_Assignment.html
@@ -10,14 +10,16 @@
   body {
     background: #f5f9f8;
     font-family: 'Segoe UI', sans-serif;
-    margin: 0; /* Remove default margin */
+    margin: 0;
   }
 
+  /* Sidebar */
   .sidebar {
     min-height: 100vh;
     background-color: #2A5C88;
     color: white;
     padding: 20px 10px;
+    transition: transform 0.3s ease-in-out;
   }
 
   .sidebar h4 {
@@ -37,7 +39,7 @@
 
   .sidebar a:hover,
   .sidebar a.active {
-    background-color: #1f4565; /* Slightly darker hover */
+    background-color: #204664;
   }
 
   .sidebar a.logout-link {
@@ -49,21 +51,20 @@
     color: white !important;
   }
 
-  .btn-purple {
-    background: #2A5C88;
-    color: white;
-  }
-
-  .btn-purple:hover {
-    background: #1f4565;
-  }
-
+  /* Toggle Button */
   .toggle-btn {
     display: none;
+    background-color: #2A5C88;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    cursor: pointer;
+    border-radius: 5px;
+    font-size: 16px;
   }
 
-  /* Mobile layout */
-  @media (max-width: 768px) {
+  /* Mobile Layout */
+   @media (max-width: 768px) {
     .sidebar {
       position: fixed;
       width: 200px;
@@ -86,47 +87,45 @@
     }
 
     .main-content {
-      margin-left: 0; /* Full width content on mobile */
+      margin-left: 0; /* full width on mobile */
     }
   }
 
-  /* Desktop layout */
+  /* Desktop Layout */
   @media (min-width: 769px) {
     .sidebar {
       position: fixed;
       width: 220px;
       top: 0;
       left: 0;
-      transform: none; /* Always visible */
+      transform: none;
     }
 
     .main-content {
-      margin-left: 220px; /* Space for sidebar */
+      margin-left: 220px; /* This rule will now apply */
       padding: 20px;
     }
 
     .toggle-btn {
-      display: none; /* No toggle button on desktop */
+      display: none;
     }
   }
 </style>
 
+
 </head>
 <body>
-    <!-- Toggle button -->
   <button class="toggle-btn" onclick="toggleSidebar()">☰ Menu</button>
 
-  <!-- Sidebar -->
   <div class="sidebar" id="sidebar">
     <h4 class="mb-4">Admin Panel</h4>
-    <a class="active" href="create_assignment.html">Create Assignment</a>
-    <a href="create_Code_Assignment.html">create code Assignment </a>
+    <a  href="create_assignment.html">Create Assignment</a>
+    <a class="active" href="create_Code_Assignment.html">Create Code Assignment</a>
     <a href="create_assignment_History.html">Assignment History</a>
     <a href="admin_dashboard.html" onclick="logout()">← Back</a>
   </div>
 
-  <!-- Main content -->
-  <main id="mainContent" class="container">
+  <main id="mainContent" class="container main-content">
     <h1 class="my-4 text-center">Create New Code Assignment</h1>
     <div class="card p-4 shadow-sm">
       <form id="createAssignmentForm">
@@ -150,81 +149,50 @@
             </select>
           </div>
         </div>
-        <div class="mb-3">
-          <label for="assignmentTitle" class="form-label">Assignment Title</label>
-          <input
-            type="text"
-            class="form-control"
-            id="assignmentTitle"
-            placeholder="e.g., Sasha and Brenda's Game"
-            required
-          />
-        </div>
-        <div class="mb-3">
-          <label for="problemStatement" class="form-label"
-            >Problem Statement (Markdown Supported)</label
-          >
-          <textarea
-            class="form-control"
-            id="problemStatement"
-            rows="8"
-            placeholder="e.g., Design a program for Sasha and Brenda's game..."
-            required
-          ></textarea>
-        </div>
 
-        <h3 class="mt-4 mb-3">Test Cases</h3>
-        <div id="testCasesContainer">
-          <div class="input-group mb-2 test-case-group">
-            <textarea class="form-control" placeholder="Input" required></textarea>
-            <textarea
-              class="form-control ms-2"
-              placeholder="Expected Output"
-              required
-            ></textarea>
-            <button
-              type="button"
-              class="btn btn-outline-danger ms-2 remove-test-case"
-            >
-              Remove
-            </button>
+        <h3 class="mt-4 mb-3">Questions</h3>
+        <div id="questionsContainer">
+          <div class="question-block border rounded p-3 mb-3">
+            <div class="mb-3">
+              <label class="form-label">Question Title</label>
+              <input type="text" class="form-control question-title" placeholder="e.g., Sasha and Brenda's Game" required>
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Problem Statement (Markdown Supported)</label>
+              <textarea class="form-control question-problem" rows="5" required></textarea>
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Time Limit (minutes)</label>
+              <input type="number" min="1" class="form-control question-time" placeholder="e.g., 15" required>
+            </div>
+
+            <h5>Test Cases</h5>
+            <div class="testCasesContainer">
+              <div class="input-group mb-2 test-case-group">
+                <textarea class="form-control" placeholder="Input" required></textarea>
+                <textarea class="form-control ms-2" placeholder="Expected Output" required></textarea>
+                <button type="button" class="btn btn-outline-danger ms-2 remove-test-case">Remove</button>
+              </div>
+            </div>
+            <button type="button" class="btn btn-secondary btn-sm mt-2 addTestCaseBtn">Add Test Case</button>
+            <button type="button" class="btn btn-outline-danger btn-sm mt-2 remove-question">Remove Question</button>
           </div>
         </div>
-        <button type="button" class="btn btn-secondary mt-2" id="addTestCaseBtn">
-          Add Test Case
-        </button>
+        <button type="button" class="btn btn-success mt-3" id="addQuestionBtn">Add Another Question</button>
 
         <div class="d-grid mt-4">
-          <button
-            type="submit"
-            class="btn btn-primary btn-lg"
-            id="saveAssignmentBtn"
-          >
-            Save Assignment
-          </button>
+          <button type="submit" class="btn btn-primary btn-lg" id="saveAssignmentBtn">Save Assignment</button>
         </div>
       </form>
       <div id="statusMessage" class="mt-3 text-center"></div>
     </div>
   </main>
 
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    crossorigin="anonymous"
-  ></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
   <script type="module">
-    import {
-      initializeApp,
-    } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
-    import {
-      getFirestore,
-      collection,
-      addDoc,
-      getDocs,
-      doc,
-      getDoc,
-    } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
+    import { getFirestore, collection, addDoc, getDocs, doc, getDoc } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyBYHB5XMte4Qj919ZsQWjoiFBcNrjl1xso",
@@ -239,16 +207,14 @@
     const db = getFirestore(app);
 
     const form = document.getElementById("createAssignmentForm");
-    const testCasesContainer = document.getElementById("testCasesContainer");
-    const addTestCaseBtn = document.getElementById("addTestCaseBtn");
-    const statusMessage = document.getElementById("statusMessage");
-    const saveAssignmentBtn = document.getElementById("saveAssignmentBtn");
-
     const courseSelect = document.getElementById("courseSelect");
     const weekSelect = document.getElementById("weekSelect");
     const subjectSelect = document.getElementById("subjectSelect");
+    const questionsContainer = document.getElementById("questionsContainer");
+    const addQuestionBtn = document.getElementById("addQuestionBtn");
+    const saveAssignmentBtn = document.getElementById("saveAssignmentBtn");
+    const statusMessage = document.getElementById("statusMessage");
 
-    // Load courses from root-level "courses" collection
     async function loadCourses() {
       try {
         const snapshot = await getDocs(collection(db, "courses"));
@@ -261,7 +227,6 @@
           courseSelect.appendChild(option);
         });
       } catch (err) {
-        console.error("Error loading courses:", err);
         statusMessage.innerHTML = `<p class="text-danger">Error loading courses: ${err.message}</p>`;
       }
     }
@@ -270,13 +235,11 @@
       const courseId = courseSelect.value;
       weekSelect.innerHTML = `<option value="">-- Select Week --</option>`;
       subjectSelect.innerHTML = `<option value="">-- Select Subject --</option>`;
-
       if (!courseId) return;
 
       try {
         const courseDoc = await getDoc(doc(db, "courses", courseId));
         if (!courseDoc.exists()) return;
-
         const data = courseDoc.data();
 
         if (typeof data.weeks === "number") {
@@ -297,99 +260,94 @@
           });
         }
       } catch (error) {
-        console.error("Error loading course data:", error);
         statusMessage.innerHTML = `<p class="text-danger">Error loading course data: ${error.message}</p>`;
       }
     });
 
-    addTestCaseBtn.addEventListener("click", () => {
-      const newTestCaseGroup = document.createElement("div");
-      newTestCaseGroup.className = "input-group mb-2 test-case-group";
-      newTestCaseGroup.innerHTML = `
-            <textarea class="form-control" placeholder="Input" required></textarea>
-            <textarea class="form-control ms-2" placeholder="Expected Output" required></textarea>
-            <button type="button" class="btn btn-outline-danger ms-2 remove-test-case">Remove</button>
-        `;
-      testCasesContainer.appendChild(newTestCaseGroup);
+    addQuestionBtn.addEventListener("click", () => {
+      const firstQuestion = questionsContainer.querySelector(".question-block");
+      const newQuestion = firstQuestion.cloneNode(true);
+      newQuestion.querySelectorAll("input, textarea").forEach(el => el.value = "");
+      questionsContainer.appendChild(newQuestion);
     });
 
-    testCasesContainer.addEventListener("click", (e) => {
+    questionsContainer.addEventListener("click", (e) => {
+      if (e.target.classList.contains("addTestCaseBtn")) {
+        const testCaseContainer = e.target.closest(".question-block").querySelector(".testCasesContainer");
+        const newTestCase = document.createElement("div");
+        newTestCase.className = "input-group mb-2 test-case-group";
+        newTestCase.innerHTML = `
+          <textarea class="form-control" placeholder="Input" required></textarea>
+          <textarea class="form-control ms-2" placeholder="Expected Output" required></textarea>
+          <button type="button" class="btn btn-outline-danger ms-2 remove-test-case">Remove</button>
+        `;
+        testCaseContainer.appendChild(newTestCase);
+      }
       if (e.target.classList.contains("remove-test-case")) {
         e.target.closest(".test-case-group").remove();
+      }
+      if (e.target.classList.contains("remove-question")) {
+        if (document.querySelectorAll(".question-block").length > 1) {
+          e.target.closest(".question-block").remove();
+        }
       }
     });
 
     form.addEventListener("submit", async (e) => {
       e.preventDefault();
-      statusMessage.innerHTML = `<p class="text-info">Saving assignment...</p>`;
       saveAssignmentBtn.disabled = true;
+      statusMessage.innerHTML = `<p class="text-info">Saving assignment...</p>`;
 
-      const assignmentCourseId = courseSelect.value;
-      const assignmentSubject = subjectSelect.value;
-      const assignmentWeek = weekSelect.value;
-      const assignmentTitle = document
-        .getElementById("assignmentTitle")
-        .value.trim();
-      const problemStatement = document
-        .getElementById("problemStatement")
-        .value.trim();
+      const questions = [];
+      document.querySelectorAll(".question-block").forEach(block => {
+        const title = block.querySelector(".question-title").value.trim();
+        const problemStatement = block.querySelector(".question-problem").value.trim();
+        const timeLimitMinutes = parseInt(block.querySelector(".question-time").value.trim(), 10);
+        const testCases = [];
 
-      const testCases = [];
-      document.querySelectorAll(".test-case-group").forEach((group) => {
-        const input = group.querySelector("textarea:nth-child(1)").value.trim();
-        const expectedOutput = group
-          .querySelector("textarea:nth-child(2)")
-          .value.trim();
-        if (input && expectedOutput) {
-          testCases.push({ input, expectedOutput });
+        block.querySelectorAll(".test-case-group").forEach(group => {
+          const input = group.querySelector("textarea:nth-child(1)").value.trim();
+          const expectedOutput = group.querySelector("textarea:nth-child(2)").value.trim();
+          if (input && expectedOutput) {
+            testCases.push({ input, expectedOutput });
+          }
+        });
+
+        if (title && problemStatement && timeLimitMinutes && testCases.length > 0) {
+          questions.push({ title, problemStatement, timeLimitMinutes, testCases });
         }
       });
 
-      if (testCases.length === 0) {
-        statusMessage.innerHTML = `<p class="text-danger">Please add at least one test case.</p>`;
+      if (questions.length === 0) {
+        statusMessage.innerHTML = `<p class="text-danger">Please add at least one question with test cases.</p>`;
         saveAssignmentBtn.disabled = false;
         return;
       }
 
       try {
-        const assignmentsCollectionPath = "code_assignments";
-        const newAssignmentRef = await addDoc(
-          collection(db, assignmentsCollectionPath),
-          {
-            courseId: assignmentCourseId,
-            subject: assignmentSubject,
-            week: parseInt(assignmentWeek, 10),
-            title: assignmentTitle,
-            problemStatement: problemStatement,
-            testCases: testCases,
-            createdAt: new Date(),
-            createdBy: "admin", // placeholder, no auth
-          }
-        );
-
-        statusMessage.innerHTML = `<p class="text-success">Assignment saved successfully! ID: ${newAssignmentRef.id}</p>`;
+        const newAssignmentRef = await addDoc(collection(db, "code_assignments"), {
+          courseId: courseSelect.value,
+          subject: subjectSelect.value,
+          week: parseInt(weekSelect.value, 10),
+          questions: questions,
+          createdAt: new Date(),
+          createdBy: "admin"
+        });
+        statusMessage.innerHTML = `<p class="text-success">Assignment saved! ID: ${newAssignmentRef.id}</p>`;
         form.reset();
-        weekSelect.innerHTML = `<option value="">-- Select Week --</option>`;
-        subjectSelect.innerHTML = `<option value="">-- Select Subject --</option>`;
-        testCasesContainer.innerHTML = `
-                <div class="input-group mb-2 test-case-group">
-                    <textarea class="form-control" placeholder="Input" required></textarea>
-                    <textarea class="form-control ms-2" placeholder="Expected Output" required></textarea>
-                    <button type="button" class="btn btn-outline-danger ms-2 remove-test-case">Remove</button>
-                </div>
-            `;
+        questionsContainer.innerHTML = "";
+        addQuestionBtn.click();
       } catch (error) {
-        console.error("Error adding document:", error);
         statusMessage.innerHTML = `<p class="text-danger">Error saving assignment: ${error.message}</p>`;
       } finally {
         saveAssignmentBtn.disabled = false;
       }
     });
-window.toggleSidebar = function () {
-  const sidebar = document.getElementById('sidebar');
-  sidebar.classList.toggle('show');
-}
-    // Load courses on page load
+
+    window.toggleSidebar = function () {
+      document.getElementById('sidebar').classList.toggle('show');
+    }
+
     loadCourses();
   </script>
 </body>
